# python/xpctl/swagger_server/swagger/swagger.yaml
@@ -399,6 +399,18 @@ paths:
         description: "ID of experiment to return"
         required: true
         type: "string"
+      - name: "event_type"
+        in: "query"
+        description: ""
+        required: false
+        type: "string"
+      - name: "metric"
+        in: "query"
+        description: ""
+        required: false
+        type: "array"
+        items:
+          type: "string"
       responses:
         200:
           description: "successful operation"
@@ -408,8 +420,8 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Experiment not found"
-        default:
-          description: "unexpected error"
+        500:
+          description: "Server threw an error"
           schema:
             $ref: "#/definitions/Response"
       x-swagger-router-controller: "swagger_server.controllers.xpctl_controller"
